--- a/src/Style/offers.css
+++ b/src/Style/offers.css
@@ -10,6 +10,7 @@
     padding-top: 30px;
     padding-bottom: 10px;
 
+
 }
 .whitebackgroundoffers{
     background-color: white;
@@ -83,7 +84,8 @@
 
   .dashannouncement{
     font-size: 40px;
-    padding-bottom: 30px;
+    padding-bottom: 20px;
+    padding-top: 20px;
     font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
     text-align: start;
