--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,7 @@ body {
   height: fit-content;
   width: 750px;
   margin-top: 10%;
+  padding: 30px;
   background-color: rgba(255, 255, 255, 0.13);
   backdrop-filter: blur(10px);
   border: 2px solid rgba(255, 255, 255, 0.1);
