--- a/src/Style/user.css
+++ b/src/Style/user.css
@@ -112,8 +112,8 @@
   border-width: 1px;
   cursor: pointer;
 }
-.button-cancel:hover{
-background-color: #e52b5003;
+.button-cancel:hover {
+  background-color: #e52b5003;
 }
 
 .button-signx {
@@ -222,7 +222,7 @@ background-color: #e52b5003;
   font-family: "Ubuntu", sans-serif;
   margin-bottom: 20px;
 }
-.deststamp{
+.deststamp {
   height: 100px;
   width: 50%;
   background-color: #e52b51;
@@ -230,13 +230,14 @@ background-color: #e52b5003;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   padding-left: 15px;
 }
-.deststamp:hover{
-cursor: pointer;
+.deststamp:hover {
+  cursor: pointer;
 }
-.deststampar{
+.deststampar {
   height: 100px;
   width: 50%;
   background-color: #e52b51;
@@ -244,12 +245,13 @@ cursor: pointer;
   flex-direction: row-reverse;
   align-items: center;
   justify-content: space-between;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   padding-right: 15px;
   margin-left: 20px;
 }
-.deststampar:hover{
-cursor: pointer;
+.deststampar:hover {
+  cursor: pointer;
 }
 
 .deststamptitle {
@@ -258,43 +260,39 @@ cursor: pointer;
   font-family: "Ubuntu", sans-serif;
   font-weight: 600;
 }
-.deststampimage{
+.deststampimage {
   width: 70px;
   height: 82px;
 }
 
-.deststamptitlesmall{
+.deststamptitlesmall {
   font-family: "Ubuntu", sans-serif;
   font-size: 22px;
-  color: #f1f1f1; 
+  color: #f1f1f1;
   align-self: flex-start;
   line-height: 25px;
-
 }
-.deststamptitlelarge{
+.deststamptitlelarge {
   font-family: "Ubuntu", sans-serif;
   font-size: 55px;
   font-weight: 600;
-  color: #f1f1f1; 
+  color: #f1f1f1;
   text-align: left;
   line-height: 30px;
   margin-left: 15px;
-
-
 }
-.deststamptitlesmallar{
-  font-family:  sans-serif;
+.deststamptitlesmallar {
+  font-family: sans-serif;
   font-size: 25px;
-  color: #f1f1f1; 
+  color: #f1f1f1;
   align-self: flex-end;
   line-height: 20px;
-
 }
-.deststamptitlelargear{
+.deststamptitlelargear {
   font-family: sans-serif;
   font-size: 55px;
   font-weight: 600;
-  color: #f1f1f1; 
+  color: #f1f1f1;
   text-align: right;
   line-height: 32px;
   margin-right: 30px;
@@ -454,7 +452,7 @@ cursor: pointer;
   height: 200px;
   border-radius: 50%;
   margin-bottom: 25px;
-  object-fit:cover;
+  object-fit: cover;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
 }
 
@@ -466,7 +464,7 @@ cursor: pointer;
   backdrop-filter: blur(10px);
   border: 2px solid rgba(255, 255, 255, 0.1);
   box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
-padding: 35px;
+  padding: 35px;
 }
 .form-styleh * {
   font-family: "Ubuntu", sans-serif;
@@ -547,7 +545,6 @@ padding: 35px;
   padding-top: 10px;
   font-family: "Ubuntu", sans-serif;
   text-align: center;
-
 }
 .codedest {
   font-size: 70px;
@@ -584,11 +581,11 @@ padding: 35px;
   flex-wrap: wrap;
   justify-content: center;
   align-content: flex-start;
-  position:absolute;
+  position: absolute;
   z-index: -1;
   width: 100%;
   height: 100%;
-padding: 30px;
+  padding: 30px;
 }
 .whitebackgroundprofile {
   background-color: white;
@@ -694,7 +691,6 @@ padding: 30px;
   margin-left: 0;
   border-radius: 20px;
   object-fit: cover;
-
 }
 .spotimagetext {
   align-self: center;
@@ -708,7 +704,7 @@ padding: 30px;
   color: #e52b51;
   object-fit: cover;
   margin-top: 20px;
-  padding-top:220px;
+  padding-top: 220px;
   justify-content: center;
   text-align: center;
   font-family: "Ubuntu", sans-serif;
@@ -728,7 +724,6 @@ padding: 30px;
   justify-content: center;
   text-align: center;
   font-family: "Ubuntu", sans-serif;
-
 }
 .imagechoose {
   display: flex;
@@ -750,11 +745,10 @@ padding: 30px;
   color: #e52b51;
   object-fit: cover;
   margin-top: 20px;
-  padding-top:140px;
+  padding-top: 140px;
   justify-content: center;
   text-align: center;
   font-family: "Ubuntu", sans-serif;
-  
 }
 
 .input-style-choose {
@@ -808,7 +802,7 @@ padding: 30px;
   align-self: center;
 }
 
-.closeinfomodal{
+.closeinfomodal {
   color: red;
   font-size: 30px;
   cursor: pointer;
@@ -848,6 +842,19 @@ padding: 30px;
   margin-bottom: 10px;
 }
 
+.logoutbutton {
+  color: white;
+  border-style: none;
+  border-width: 0px;
+  background-color: #e52b51;
+  font-family: "Ubuntu", sans-serif;
+  border-radius: 10px;
+  padding: 10px;
+  height: 50px;
+  width: 10%;
+  margin-right: 2%;
+}
+
 .buttonlogout {
   color: red;
   background-color: white;
@@ -866,14 +873,13 @@ padding: 30px;
   flex-wrap: wrap;
   flex-flow: row;
 }
-.settingsmodal{
+.settingsmodal {
   font-size: 30px;
   align-self: center;
   color: #e52b51;
 }
 .settingsmodal:hover {
   cursor: pointer;
-  
 }
 
 .reviewlabel {
@@ -917,27 +923,26 @@ padding: 30px;
   margin-left: 10px;
 }
 
-.fontfamily{
+.fontfamily {
   font-family: "Ubuntu", sans-serif;
 }
 
-.overlayfinished{
- background-color: rgba(0, 0, 0, 0.449);
- position: absolute;
- z-index: 99;
- width: 100%;
- height: 100%;
- display: flex;
- align-items: center;
- align-content: center;
- justify-content: center;
+.overlayfinished {
+  background-color: rgba(0, 0, 0, 0.449);
+  position: absolute;
+  z-index: 99;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
 }
-.overlayfinishedlabel{
+.overlayfinishedlabel {
   font-size: 50px;
   font-family: "Ubuntu", sans-serif;
   color: #ffffff;
-
 }
-.overlayfinishedlabel:hover{
+.overlayfinishedlabel:hover {
   cursor: pointer;
 }
