--- a/src/Style/nav.css
+++ b/src/Style/nav.css
@@ -41,7 +41,6 @@
 }
 
 .navitemPortal{
-  width: auto;
   color: white;
   font-size: 20px;
   display: flex;
@@ -52,13 +51,13 @@
   align-content: center;
 }
 .navitemmyPortal{
-
   color: white;
   font-size: 20px;
   display: flex;
   flex-direction: row;
   align-items: flex-end;
   justify-content: flex-end;
+  width: fit-content;
 }
 
 .navitemPortal-right {
@@ -66,13 +65,13 @@
 }
 
 .navitemPortalDiv{
-  padding: 10px;
-  padding-left: 30px;
-  padding-right: 30px;
-  border-width: 2px;
+  padding: 8px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-width: 6px;
   border-color: #e52b51;
   border-style:solid;
-  border-radius: 20px;
+  border-radius: 30px;
 
 }
 .navitemPortalDiv:hover{
