--- a/src/Style/user.css
+++ b/src/Style/user.css
@@ -460,7 +460,7 @@
   height: fit-content;
   width: 400px;
   background-color: rgba(255, 255, 255, 0.13);
-  border-radius: 10px;
+  border-radius: 30px;
   backdrop-filter: blur(10px);
   border: 2px solid rgba(255, 255, 255, 0.1);
   box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
@@ -673,7 +673,7 @@
 }
 .spotgallery {
   align-self: center;
-  min-width: 450px;
+  width: 450px;
   height: 300px;
   margin: 10px;
   border-radius: 30px;
