--- a/src/Style/user.css
+++ b/src/Style/user.css
@@ -533,7 +533,7 @@
   font-weight: bold;
 }
 .codelabel {
-  font-size: 30px;
+  font-size: 25px;
   padding-top: 30px;
   font-family: "Ubuntu", sans-serif;
   font-weight: bold;
@@ -541,10 +541,11 @@
   color: #bb2626;
 }
 .codelabelsecond {
-  font-size: 30px;
+  font-size: 20px;
   padding-top: 10px;
   font-family: "Ubuntu", sans-serif;
   text-align: center;
+  line-height: 2;
 }
 .codedest {
   font-size: 70px;
@@ -618,6 +619,11 @@
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   width: 65%;
   border-radius: 20px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 .whitebackgroundcreateoffmy {
   align-self: center;
